k8s/office/kimai/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kimai
  labels:
    app: kimai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kimai
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kimai
    spec:
      containers:
        - name: kimai
          image: kimai/kimai2:latest
          ports:
            - containerPort: 8001
          volumeMounts:
            - name: kimai-config
              mountPath: /opt/kimai/public
        - name: kimai-db
          image: mysql:5.7
          ports:
            - containerPort: 3306
          # livenessProbe:
          #   exec:
          #     command:
          #       - mysqladmin
          #       - p$MYSQL_ROOT_PASSWORD
          #       - ping
          #       - -h
          #       - localhost
          #   initialDelaySeconds: 60
          #   periodSeconds: 60
          volumeMounts:
            - name: kimai-db
              mountPath: /var/lib/mysql
      restartPolicy: Always
      volumes:
        - name: kimai-config
          persistentVolumeClaim:
            claimName: kimai-config
        - name: kimai-db
          persistentVolumeClaim:
            claimName: kimai-db
