k8s/office/kimai/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kimai
  labels:
    app: kimai
spec:
  type: NodePort
  ports:
    - name: http
      port: 8001
  selector:
    app: kimai
