k8s/office/kimai/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-system-sso@kubernetescrd,traefik-system-security@kubernetescrd'
    traefik.ingress.kubernetes.io/router.tls: 'true'
  name: kimai
spec:
  rules:
    - host: kimai.fmlab.no
      http:
        paths:
          - backend:
              service:
                name: kimai
                port:
                  number: 8001
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - kimai.fmlab.no
      secretName: certificate-kimai
